<resources>
    <string name="app_name">Heat Loss App</string>
    <string name="add_new_house_dialog_title">Add New House</string>
    <string name="delete_house_dialog_title">Delete House</string>
    <string name="delete_house_dialog_message">Do you want to delete your house?</string>
    <string name="delete_room_dialog_title">Delete Room</string>
    <string name="delete_room_dialog_message">Do you want to delete your room?</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="house_name">House name</string>
    <string name="new_house">New House</string>
    <string name="house_avatar">House Avatar</string>
    <string name="add_your_first_house">Add your first house</string>
    <string name="add_your_first_room">Add your first room</string>
    <string name="back_button">Back button</string>
    <string name="living_room">Living room</string>
    <string name="family_room">Family room</string>
    <string name="dining_room">Dining room</string>
    <string name="kitchen">Kitchen</string>
    <string name="game_room">Game room</string>
    <string name="bathroom">Bathroom</string>
    <string name="bedroom">Bedroom</string>
    <string name="laundry_room">Laundry room</string>
    <string name="sun_room">Sun room</string>
    <string name="study_room">Study room</string>
    <string name="utility_room">Utility room</string>
    <string name="ceiling">Ceiling</string>
    <string name="floor">Floor</string>
    <string name="wall_1">Wall 1</string>
    <string name="wall_4">Wall 4</string>
    <string name="wall_3">Wall 3</string>
    <string name="wall_2">Wall 2</string>
    <string name="area">Area, m2</string>
    <string name="insulated">Insulated</string>
    <string name="internal_temperature">Internal Temperature:</string>
    <string name="_0">0</string>
    <string name="ambient_temperature">Ambient Temperature:</string>
    <string name="_25">-50</string>
    <string name="_plus25">+50</string>
    <string name="add">Add</string>
</resources>